--- a/623ecc21a2664bb6a1592a04d976f9fa.opf/meta.yml
+++ b/623ecc21a2664bb6a1592a04d976f9fa.opf/meta.yml
@@ -2,6 +2,7 @@ id: 623ecc21a2664bb6a1592a04d976f9fa
 initial_creation_type: ocr
 created_date: 28/10/2021
 updated_date: 28/10/2021
+archive_id: P000003
 source_metadata:
   title: འཕགས་པ་སྒྱུ་མ་མཁན་བཟང་པོ་ལུང་བསྟན་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།
   source_id: W22083
